--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -62,7 +62,7 @@
 	    </div>
 	    <br>
 	    <div class="col-lg-12 col-md-12 col-sm-12">
-
+	    {{ triggeredArr }}
 	    <div class="korg-border">
 	    	<div class="pad-row" >
 	    		<span class="pad"  ng-class="{red: triggered}" id="row-0-{{$index}}" ng-repeat="pad in [0,1,2,3]">
