--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -8,6 +8,7 @@
 	            <option value="" disabled>Choose a MIDI device...</option>
 	        </select>
 	    </div>
+
 	    <div class="col-lg-6 col-md-6 col-sm-6">
 	        <h2>Oscillator</h2>
 	        <div class="form-group">
@@ -62,6 +63,12 @@
 	        </div>
 	    </div>
 	    <br>
+
+	    <div class="col-lg-12 col-md-12 col-sm-12">
+	    	<button ng-click="startHello()" class="btn">Start hello</button>
+	    	<button ng-click="stopHello()" class="btn">Stop hello</button>
+		</div>
+
 	    <div class="col-lg-12 col-md-12 col-sm-12">
 	    <div class="korg-border" ng-show="activeDevice">
 	    	<div class="pad-row" >
@@ -79,6 +86,4 @@
 	    	</div>
 	    </div>
 	</div>
-    <fullstack-logo></fullstack-logo>
-    <rando-greeting></rando-greeting>
 </section>
