--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -65,8 +65,10 @@
 	    <br>
 
 	    <div class="col-lg-12 col-md-12 col-sm-12">
-	    	<button ng-click="startHello()" class="btn">Start hello</button>
-	    	<button ng-click="stopHello()" class="btn">Stop hello</button>
+	    	<button ng-click="startTransport()" class="btn">Start transport</button>
+	    	<button ng-click="stopTransport()" class="btn">Stop transport</button>
+	    	<button ng-click="loadMetronome()" class="btn">Start metronome</button>
+	    	<button ng-click="pauseMetronome()" class="btn">Stop metronome</button>
 		</div>
 
 	    <div class="col-lg-12 col-md-12 col-sm-12">
