--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -11,8 +11,9 @@
 		        </select>
 		    </div>
 		    <div class="form-group">
-		    	<select class="form-control">
+		    	<select ng-model="activeInstrument" class="form-control">
 			    	<option value="" disabled>Choose a synth...</option>
+			    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
 		    	</select>
 		    </div>
 		</div>
