Fixed hard coded time in _noteOn.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,8 +1,8 @@
 <section id="home">
 	<div class="synth container" ng-controller="WebSynthCtrl">
 
-		<!-- {{ triggeredArr }}
-	    {{ score }} -->
+		<!-- {{ triggeredArr }} -->
+	    {{ score }}
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
 		    <div class="form-group">
