Added dummy play button. General cleanup.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -2,7 +2,7 @@
 	<div class="synth container" ng-controller="WebSynthCtrl">
 
 		<!-- {{ triggeredArr }} -->
-	    {{ score }}
+	    <button class="btn" ng-click="play()">Play</button>{{ score }}
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
 		    <div class="form-group">
