--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -3,6 +3,7 @@
 
 		<!-- {{ triggeredArr }} -->
 	    {{ score }}
+	    OSC:  {{synthEngine}}
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
 		    <div class="form-group">
@@ -16,6 +17,12 @@
 			    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
 		    	</select>
 		    </div>
+	        <div class="form-group">
+	        	<select ng-model="activeOscillator" class="form-control">
+	    	    	<option value="" disabled>Choose an oscillator...</option>
+	    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
+	        	</select>
+	        </div>
 		</div>
 		<hr>
 	    <!-- Transport and metronome -->
