--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -2,7 +2,11 @@
 	<div class="synth container" ng-controller="WebSynthCtrl">
 
 		<!-- {{ triggeredArr }} -->
-	    <button class="btn" ng-click="play()">Play</button>{{ score }}
+	    <button class="btn" ng-click="play()">Play</button>
+	    <button class="btn" ng-click="recordStart()"><i class="fa fa-circle"></i> Record</button>
+	    <button class="btn" ng-click="recordStop()"><i class="fa fa-square"></i> Record</button>
+	    {{ score }}
+
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
 		    <div class="form-group">
