--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -3,7 +3,6 @@
 
 		<!-- {{ triggeredArr }} -->
 	    {{ score }}
-	    OSC:  {{synthEngine}}
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
 		    <div class="form-group">
@@ -23,6 +22,7 @@
 	    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
 	        	</select>
 	        </div>
+	        <button ng-click="setDelay()"> Add Delay </button>
 		</div>
 		<hr>
 	    <!-- Transport and metronome -->
@@ -32,6 +32,8 @@
 	    	<button ng-click="loadMetronome()" class="btn">Start metronome</button>
 	    	<button ng-click="pauseMetronome()" class="btn">Stop metronome</button>
 		</div>
+		<!-- BPM Directive-->
+		<bpm-slider></bpm-slider>
 
 		<!-- Drumpads -->
 	    <div class="col-lg-12 col-md-12 col-sm-12">
