--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -5,6 +5,7 @@
 	    <button class="btn" ng-click="play()">Play</button>
 	    <button class="btn" ng-if="!getRecordingStatus()" ng-click="recordStart()"><i class="fa fa-circle"></i> Record</button>
 	    <button class="btn btn-danger" ng-if="getRecordingStatus()" ng-click="recordStop()"><i class="fa fa-square"></i> Record</button>
+	    <button class="btn" ng-click="clearRecording()">Clear recording</button>
 	    {{ position }}
 	    {{ score }}
 
