--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -1,43 +1,63 @@
 <section id="home">
 	<div class="synth container" ng-controller="WebSynthCtrl">
 
-		<!-- {{ triggeredArr }} -->
-	    <button class="btn" ng-click="play()">Play</button>
-	    <button class="btn" ng-if="!getRecordingStatus()" ng-click="recordStart()"><i class="fa fa-circle"></i> Record</button>
-	    <button class="btn btn-danger" ng-if="getRecordingStatus()" ng-click="recordStop()"><i class="fa fa-square"></i> Record</button>
-	    <button class="btn" ng-click="clearRecording()">Clear recording</button>
 	    {{ position }}
 	    {{ score }}
 
 	    <h1>Web MIDI API Drumpads</h1>
 	    <div class="form-inline">
-		    <div class="form-group">
-		        <select ng-model="activeDevice" class="form-control" ng-options="device.manufacturer + ' ' + device.name for device in devices">
-		            <option value="" disabled>Choose a MIDI device...</option>
-		        </select>
-		    </div>
-		    <div class="form-group">
-		    	<select ng-model="activeInstrument" class="form-control">
-			    	<option value="" disabled>Choose a synth...</option>
-			    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
-		    	</select>
-		    </div>
-	        <div class="form-group">
-	        	<select ng-model="activeOscillator" class="form-control">
-	    	    	<option value="" disabled>Choose an oscillator...</option>
-	    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
-	        	</select>
+
+	    	<!-- Synth settings -->
+		    <div class="col-md-7">
+			    <div class="form-group">
+			        <select ng-model="activeDevice" class="form-control" ng-options="device.manufacturer + ' ' + device.name for device in devices">
+			            <option value="" disabled>Choose a MIDI device...</option>
+			        </select>
+			    </div>
+			    <div class="form-group">
+			    	<select ng-model="activeInstrument" class="form-control">
+				    	<option value="" disabled>Choose a synth...</option>
+				    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
+			    	</select>
+			    </div>
+		        <div class="form-group">
+		        	<select ng-model="activeOscillator" class="form-control">
+		    	    	<option value="" disabled>Choose an oscillator...</option>
+		    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
+		        	</select>
+		        </div>
 	        </div>
-	        <button ng-click="setDelay()"> Add Delay </button>
+
+	    	<!-- Transport and metronome -->
+	    	<div class="col-md-5">
+		    	<button class="btn" ng-click="play()" ng-if="!playing">
+			    	<i class="fa fa-play"></i> Play
+			    </button>
+				<button class="btn btn-success" ng-click="stop()" ng-if="playing">
+			    	<i class="fa fa-square"></i> Stop
+			    </button>
+
+			    <button class="btn" ng-if="!getRecordingStatus()" ng-click="recordStart()">
+			    	<i class="fa fa-circle"></i> Record
+			    </button>
+			    <button class="btn btn-danger" ng-if="getRecordingStatus()" ng-click="recordStop()">
+			    	<i class="fa fa-square"></i> Record
+			    </button>
+
+			    <button ng-click="loadMetronome()" ng-if="!metronomePlaying" class="btn">
+		    		<i class="fa fa-clock-o"></i> Metronome
+		    	</button>
+		    	<button ng-click="pauseMetronome()" ng-if="metronomePlaying" class="btn btn-success">
+		    		<i class="fa fa-clock-o"></i> Metronome
+		    	</button>
+
+			    <button class="btn" ng-click="clearRecording()">
+			    	<i class="fa fa-trash-o"></i> Clear
+			    </button>
+		    </div>
 		</div>
 		<hr>
-	    <!-- Transport and metronome -->
-	    <div class="col-lg-12 col-md-12 col-sm-12">
-	    	<button ng-click="startTransport()" class="btn">Start transport</button>
-	    	<button ng-click="stopTransport()" class="btn">Stop transport</button>
-	    	<button ng-click="loadMetronome()" class="btn">Start metronome</button>
-	    	<button ng-click="pauseMetronome()" class="btn">Stop metronome</button>
-		</div>
+
 		<!-- BPM Directive-->
 		<bpm-slider></bpm-slider>
 
