--- a/browser/js/common/directives/bpm-slider/bpm-slider.html
+++ b/browser/js/common/directives/bpm-slider/bpm-slider.html
@@ -1,9 +1,10 @@
-<input ng-model="currBPM" type="range" min="40" max="300" value="{{ currBPM }}"/>
-<span id="range">{{currBPM}}</span>
 
-<!-- <script>
-	function showValue(newValue){
-		var bpm = document.getElementById("range").innerHTML=newValue;
-		Tone.Transport.bpm.value = bpm;
-	}
-</script> -->
+<div class="form-inline">
+	<div class="col-md-2">
+		<span>BPM: </span>
+		<input ng-model="currBPM" id="bpm-input" class="form-control">
+	</div>
+	<div class="col-md-10">
+		<input ng-model="currBPM" id="bpm-slider" type="range" min="40" max="300" value="{{ currBPM }}"/>
+	</div>
+</div>
