--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -8,58 +8,63 @@
 	    <div class="form-inline">
 
 	    	<!-- Synth settings -->
-		    <div class="col-md-7">
-			    <div class="form-group">
-			        <select ng-model="activeDevice" class="form-control" ng-options="device.manufacturer + ' ' + device.name for device in devices">
-			            <option value="" disabled>Choose a MIDI device...</option>
-			        </select>
-			    </div>
-			    <div class="form-group">
-			    	<select ng-model="activeInstrument" class="form-control">
-				    	<option value="" disabled>Choose a synth...</option>
-				    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
-			    	</select>
-			    </div>
-		        <div class="form-group">
-		        	<select ng-model="activeOscillator" class="form-control">
-		    	    	<option value="" disabled>Choose an oscillator...</option>
-		    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
-		        	</select>
+	    	<div class="row">
+			    <div class="col-md-7">
+				    <div class="form-group">
+				        <select ng-model="activeDevice" class="form-control" ng-options="device.manufacturer + ' ' + device.name for device in devices">
+				            <option value="" disabled>Choose a MIDI device...</option>
+				        </select>
+				    </div>
+				    <div class="form-group">
+				    	<select ng-model="activeInstrument" class="form-control">
+					    	<option value="" disabled>Choose a synth...</option>
+					    	<option ng-repeat="instrument in instruments">{{ instrument }}</option>
+				    	</select>
+				    </div>
+			        <div class="form-group">
+			        	<select ng-model="activeOscillator" class="form-control">
+			    	    	<option value="" disabled>Choose an oscillator...</option>
+			    	    	<option ng-repeat="osc in oscs">{{ osc }}</option>
+			        	</select>
+			        </div>
 		        </div>
-	        </div>
 
-	    	<!-- Transport and metronome -->
-	    	<div class="col-md-5">
-		    	<button class="btn" ng-click="play()" ng-if="!playing">
-			    	<i class="fa fa-play"></i> Play
-			    </button>
-				<button class="btn btn-success" ng-click="stop()" ng-if="playing">
-			    	<i class="fa fa-square"></i> Stop
-			    </button>
+		    	<!-- Transport and metronome -->
+		    	<div class="col-md-5">
+			    	<button class="btn pull-right" ng-click="play()" ng-if="!playing">
+				    	<i class="fa fa-play"></i> Play
+				    </button>
+					<button class="btn btn-success pull-right" ng-click="stop()" ng-if="playing">
+				    	<i class="fa fa-square"></i> Stop
+				    </button>
 
-			    <button class="btn" ng-if="!getRecordingStatus()" ng-click="recordStart()">
-			    	<i class="fa fa-circle"></i> Record
-			    </button>
-			    <button class="btn btn-danger" ng-if="getRecordingStatus()" ng-click="recordStop()">
-			    	<i class="fa fa-square"></i> Record
-			    </button>
+				    <button class="btn pull-right" ng-if="!getRecordingStatus()" ng-click="recordStart()">
+				    	<i class="fa fa-circle"></i> Record
+				    </button>
+				    <button class="btn btn-danger pull-right" ng-if="getRecordingStatus()" ng-click="recordStop()">
+				    	<i class="fa fa-square"></i> Record
+				    </button>
 
-			    <button ng-click="loadMetronome()" ng-if="!metronomePlaying" class="btn">
-		    		<i class="fa fa-clock-o"></i> Metronome
-		    	</button>
-		    	<button ng-click="pauseMetronome()" ng-if="metronomePlaying" class="btn btn-success">
-		    		<i class="fa fa-clock-o"></i> Metronome
-		    	</button>
+				    <button ng-click="loadMetronome()" ng-if="!metronomePlaying" class="btn pull-right">
+			    		<i class="fa fa-clock-o"></i> Metronome
+			    	</button>
+			    	<button ng-click="pauseMetronome()" ng-if="metronomePlaying" class="btn btn-success pull-right">
+			    		<i class="fa fa-clock-o"></i> Metronome
+			    	</button>
 
-			    <button class="btn" ng-click="clearRecording()">
-			    	<i class="fa fa-trash-o"></i> Clear
-			    </button>
-		    </div>
+				    <button class="btn pull-right" ng-click="clearRecording()">
+				    	<i class="fa fa-trash-o"></i> Clear
+				    </button>
+			    </div>
+			</div>
+
+			<!-- BPM Directive-->
+			<div class="row">
+				<bpm-slider></bpm-slider>
+			</div>
 		</div>
 		<hr>
 
-		<!-- BPM Directive-->
-		<bpm-slider></bpm-slider>
 
 		<!-- Drumpads -->
 	    <div class="col-lg-12 col-md-12 col-sm-12">
