Further UI improvements.

--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -85,6 +85,7 @@
 				</div>
 
 				<div ng-show="activeInstrument" class="row well well-sm well-settings">
+					<div class="col-md-12 text-center"><strong>Effects</strong></div>
 					<div class="col-md-12">
 						<div role="tabpanel">
 							<!-- Nav tabs -->
@@ -101,13 +102,13 @@
 							    	<form name="delay" action="">
 							    		<!-- Column titles -->
 							    		<div class="row">
-								    		<div class="col-md-4">
+								    		<div class="col-md-4 text-center">
 								    			Delay Time
 								    		</div>
-								    		<div class="col-md-4">
+								    		<div class="col-md-4 text-center">
 								    			Feedback
 								    		</div>
-								    		<div class="col-md-4">
+								    		<div class="col-md-4 text-center">
 								    			Wet
 								    		</div>
 								    	</div>
