--- a/browser/js/common/directives/bpm-slider/bpm-slider.html
+++ b/browser/js/common/directives/bpm-slider/bpm-slider.html
@@ -1,10 +1,10 @@
 
 <div class="form-inline">
-	<div class="col-md-4">
-		<span>BPM: </span>
-		<input ng-model="currBPM" id="bpm-input" class="form-control">
+	<div class="col-md-12 text-center"><strong>BPM</strong></div>
+	<div class="col-md-3">
+		<input ng-model="currBPM" id="bpm-input" class="form-control text-center">
 	</div>
-	<div class="col-md-8">
+	<div class="col-md-9">
 		<input ng-model="currBPM" id="bpm-slider" type="range" min="40" max="300" value="{{ currBPM }}"/>
 	</div>
 </div>
