--- a/browser/js/home/home.html
+++ b/browser/js/home/home.html
@@ -94,8 +94,7 @@
 							<ul class="nav nav-tabs" role="tablist">
 								<li role="presentation" class="active"><a href="#ping-pong" aria-controls="ping-pong" role="tab" data-toggle="tab">Delay</a></li>
 							    <li role="presentation"><a href="#distortion" aria-controls="distortion" role="tab" data-toggle="tab">Distortion</a></li>
-							    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-							    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+							    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Reverb</a></li>
 							</ul>
 
 							<!-- Tab panes -->
@@ -152,10 +151,29 @@
 							    		    		</div>
 							    	    		</div>
 							    	    	</form>		
+							    </div>   						    
+							    <div role="tabpanel" class="tab-pane" id="messages">
+					    	    	<form name="delay" action="">
+					    	    		<!-- Column titles -->
+					    	    		<div class="row">
+					    		    		<div class="col-md-6 text-center">
+					    		    			Roomsize
+					    		    		</div>
+					    		    		<div class="col-md-6 text-center">
+					    		    			Dampening
+					    		    		</div>
+					    		    	</div>
+					    		    	<!-- Column settings -->
+					    		    	<div class="row">
+					    		    		<div class="col-md-6 form-inline">
+					    		    			<input ng-model="RVB_roomsize" class="slider" type="range" name="points" min="0" max="99">
+					    		    		</div>
+					    		    		<div class="col-md-6 form-inline">
+					    		    			<input ng-model="RVB_dampening" class="slider" type="range" name="points" min="0" max="99">
+					    	    			</div>
+					    	    		</div>
+					    	    	</form>		
 							    </div>
-					    	    						    
-							    <div role="tabpanel" class="tab-pane" id="messages">Three</div>
-							    <div role="tabpanel" class="tab-pane" id="settings">Four</div>
 							</div>
 						</div>
 					</div>
